viewproperties: Fix leaking file descriptors

File descriptors would keep leaking here since tempFile never gets
deleted. This would be especially noticeable when browsing /tmp/ folder.

This patch makes the QTemporaryFile an unique_ptr, so it gets
deleted when it's out of scope. This also causes the files to be
handled accordingly.

BUG: 505215


(cherry picked from commit 04e493d78cdf46e64562fe8a302426b1fd8c47df)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>